syntax = "proto3";

package com.pms.rttm.proto;

option java_package = "com.pms.rttm.proto";
option java_multiple_files = true;

message RttmQueueMetric {

  string service_name = 1;
  string topic_name = 2;
  int32 partition_id = 3;

  int64 produced_offset = 4;
  int64 consumed_offset = 5;

  string consumer_group = 6;
  int64 snapshot_time = 7;   // epoch millis
}
